# web-stack-benchmark

./: .gitignore  README.md
docs/: resultados.md
docs/results/: escalabilidade.md  fastapi-async-benchmark.md  spring-mvc-benchmark.md  spring-webflux-benchmark.md
docs/results/12cpus-12gb/: resultados-12cpus-12gb.md
docs/results/12cpus-12gb/fastapi-async/: ramp-up.json  spike.json  steady.json
docs/results/1cpus-1gb/: resultados-1cpus-1gb.md
docs/results/2cpus-2gb/: resultados-2cpus.md
docs/results/2cpus/spring-mvc/: spike.json
docs/results/4cpus-4gb/: resultados-4cpus-4gb.md
docs/results/8cpus-8gb/: resultados-8cpus-8gb.md
implementations/fastapi-async/: Dockerfile  main.py  pyproject.toml
implementations/fastapi-async/app/: database.py  main.py  models.py  schemas.py
implementations/fastapi-async/app/routers/: users.py
implementations/spring-mvc-kotlin/: Dockerfile  build.gradle.kts
implementations/spring-webflux-kotlin/: Dockerfile  build.gradle.kts
infra/: docker-compose.yml
infra/nginx/: nginx.conf  nginx.conf.template
infra/postgres/: schema.sql  seed.sql
load-tests/k6/: config.js  generate-comparison.py  generate-report.py  run-all-configs.sh  run-benchmark-config.sh  run-benchmark.sh
load-tests/k6/results/: ramp-up-run1.json  ramp-up-run2.json  ramp-up-run3.json  ramp-up-run4.json  ramp-up-run5.json  spike-run1.json  spike-run2.json  spike-run3.json  spike-run4.json  spike-run5.json  steady-run1.json  steady-run2.json  steady-run3.json  steady-run4.json  steady-run5.json
load-tests/k6/scenarios/: ramp-up.js  spike.js  steady.js
(+106 files in other folders)
